
Version 0.3s
------------
* Fixed a bug in the save format.
* You can no longer get into Rigard by mistake (before you have a pass) through the brothel announcer event.
* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). Final scene:
 - Fuck him.
* Added a new area, the King's road, reachable from the main gates of Rigard. Not much here yet.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3r
------------
* New patreon sponsored content by Del:
 - Kingdom patrol/Bandit encounter on the plains.
 - Meeting a desert caravan.
 - Hitching a ride to Rigard (short, at random).
* New patreon sponsored content by LonelyRonin - Naga win scenes:
 - Get fucked (requires vag).
 - Tailpeg (as part of get fucked).
* New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). There's two scenes available:
 - Blowjob.
 - Get fucked.
* It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).
* New TF items added to Rosalin:
 - Avia. Ingredients can be bought from Patchwork.
 - Ovis. Ingredients are a bit hard to get without debug atm.
* New TF items added to Jeanne:
 - Fertilium.
 - Virilium.
* You can now save/sleep at the penthouse after befriending the twins. This gives you another free safe spot in Rigard.
* Patches is now slightly more talkative, with the help of LD.
* Fixed some wonky job descriptions.
* Miranda can now teach you the Bruiser job. Talk to her while she's in the barracks (go another day if you don't find her).
* You can now buy items in shops in multiples of 1, 5 and 10.
* The item Homos can now remove naga and taur status.

Version 0.3q2
-------------
* Fixed Terry Orvin talk. This should also fix the issue with Terry's appearance screen.
* Fixed bug in equine get fucked loss.

Version 0.3q
------------
* Lots of typo fixes.