@@ -23,6 +23,7 @@ function Player(storage) {
 	this.jobs["Healer"]    = new JobDesc(Jobs.Healer);
 	
 	//this.jobs["Elementalist"]    = new JobDesc(Jobs.Elementalist);
+	this.jobs["Hypnotist"] = new JobDesc(Jobs.Hypnotist);
 	
 	this.maxHp.base        = 100;
 	this.maxSp.base        = 30;
