@@ -414,7 +414,6 @@ Jobs["Warlock"].Unlocked = function(entity) {
 }
 
 
-//TODO Add to ent
 Jobs["Hypnotist"] = new Job("Hypnotist");
 Jobs["Hypnotist"].Long = function(entity) {
 	var parse = {hisher: entity.hisher(), HisHer: entity.HisHer(), name: entity.nameDesc()};
@@ -422,17 +421,17 @@ Jobs["Hypnotist"].Long = function(entity) {
 }
 Jobs["Hypnotist"].preqs.push({job : Jobs["Mage"], lvl : 3});
 Jobs["Hypnotist"].preqs.push({job : Jobs["Courtesan"], lvl : 3});
-//TODO Skills, stats
 Jobs["Hypnotist"].abilities.AddAbility(Abilities.Seduction.Sleep);
 Jobs["Hypnotist"].abilities.AddAbility(Abilities.Seduction.TIllusion);
 Jobs["Hypnotist"].abilities.AddAbility(Abilities.Seduction.SIllusion);
-Jobs["Hypnotist"].levels.push(new JobLevel(40,   [{ab: Abilities.Seduction.Sleep, set: "Support"}], {"str" : 0.2}));
-Jobs["Hypnotist"].levels.push(new JobLevel(80,   null, {"str" : 0.2}));
-Jobs["Hypnotist"].levels.push(new JobLevel(160,  [{ab: Abilities.Seduction.TIllusion, set: "Support"}], {"int" : 0.1, "dex" : 0.1}));
-Jobs["Hypnotist"].levels.push(new JobLevel(320,  null, {"str" : 0.2}));
-Jobs["Hypnotist"].levels.push(new JobLevel(640,  [{ab: Abilities.Seduction.SIllusion, set: "Support"}], {"str" : 0.2}));
-Jobs["Hypnotist"].levels.push(new JobLevel(1280, null, {"str" : 0.2}));
-Jobs["Hypnotist"].levels.push(new JobLevel(2560, null, {"str" : 0.2}));
+Jobs["Hypnotist"].abilities.AddAbility(Abilities.Seduction.Confuse);
+Jobs["Hypnotist"].levels.push(new JobLevel(40,   [{ab: Abilities.Seduction.Sleep, set: "Support"}], {"cha" : 0.2, "lib" : 0.2}));
+Jobs["Hypnotist"].levels.push(new JobLevel(80,   null, {"int" : 0.3, "cha" : 0.1}));
+Jobs["Hypnotist"].levels.push(new JobLevel(160,  [{ab: Abilities.Seduction.TIllusion, set: "Support"}], {"int" : 0.2, "lib" : 0.2}));
+Jobs["Hypnotist"].levels.push(new JobLevel(320,  null, {"cha" : 0.3, "int" : 0.1}));
+Jobs["Hypnotist"].levels.push(new JobLevel(640,  [{ab: Abilities.Seduction.SIllusion, set: "Support"}], {"spi" : 0.2, "lib" : 0.2}));
+Jobs["Hypnotist"].levels.push(new JobLevel(1280, null, {"int" : 0.1, "cha" : 0.3}));
+Jobs["Hypnotist"].levels.push(new JobLevel(2560, [{ab: Abilities.Seduction.Confuse, set: "Support"}], {"cha" : 0.3, "lib" : 0.3, "int" : 0.2}));
 Jobs["Hypnotist"].Unlocked = function(entity) {
 	return gameCache.flags["LearnedMagic"] >= 3;
 }
