@@ -12,6 +12,7 @@ Version 0.3s
 * New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). Final scene:
  - Fuck him.
 * Added a new area, the King's road, reachable from the main gates of Rigard. Not much here yet.
+* The hypnotist job has been added (unlocked from Jeanne). The PC and Kiai can use it.
 
 --------------------------------------------
              PREVIOUS VERSIONS
